--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,11 +13,11 @@ a {
 	max-width:600px;
 }
 
-#inputDiv, #resultGrid, #mgbrgbr, #co_resultGrid{
+#inputDiv, #resultGrid, #map_container, #co_resultGrid{
 	padding:10px;
 }
 
-#progressBar{
+#progressBar, #co_progressBar{
 	margin-top:10px;
 }
 
@@ -40,7 +40,6 @@ a {
 
 #driveResultFrame{
 	margin-left: 0;
-
 	float:left;
 	text-align:center;
 }
@@ -80,11 +79,7 @@ a {
 	opacity: 0.7;
 }
 
-#resultGrid{
-  position:relative;
-}
-
-#co_resultGrid{
+#resultGrid, #co_resultGrid{
   position:relative;
 }
 
@@ -126,12 +121,9 @@ a {
 	margin-top:0;
 }
 
-
-
 .mdl-snackbar {
   will-change: unset;
 }
-
 
 #locateme {
 		position: absolute;
@@ -152,4 +144,20 @@ a {
     position: relative;
 	display:block;	
 	opacity:0.7;
+	white-space:nowrap;
+	font-size:12px;
+	/* color:#3f51b5;*/
+}
+
+.center-stuff {
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.icon-flipped {
+    transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -ms-transform: scaleX(-1);
 }
