resolve mixed content error

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,7 @@ html
 
 		//mobile optimized
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
-		meta(property="og:url", content="http://www.uberordrive.com/")
+		meta(property="og:url", content="https://uberordrive.com/")
 		meta(property="og:type", content="website")
 		meta(property="og:title", content="Uber or Drive?")
 		meta(property="og:description", content="Cost of driving compared with realtime fare estimates from Uber")
@@ -33,13 +33,13 @@ html
 		//material-design-lite
 		link(rel='stylesheet', href='/bower_components/material-design-lite/material.min.css')
 		script(src='/bower_components/material-design-lite/material.min.js')
-		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700')
+		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700')
 		
 		//jQuery
 		script(src='/bower_components/jquery/dist/jquery.min.js')
 		
 		//Material icon fonts
-		link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+		link(rel="stylesheet", href="//fonts.googleapis.com/icon?family=Material+Icons")
 
 		
 		//maps
