--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
 	head
 		title= title
 
-		//mobile optimized
+		//- mobile optimized
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		meta(property="og:url", content="https://uberordrive.com/")
 		meta(property="og:type", content="website")
@@ -12,17 +12,17 @@ html
 		
 		meta(property="og:image", content="images/screen.png")
 
-		//google stuff
+		//- google stuff
 		meta(name="description", content="Cost of driving compared with realtime fare estimates from Uber")
 		meta(name="google-site-verification", content="SxtFjVUdixHuwHr3AWijlKEHzcZd0q9OxfGiP1_ZRRs")
 
-		//css
+		//- css
 		link(rel='stylesheet', href='/stylesheets/style.css')
 
 
-		//polyfill (support for dialog) (no longer using dialg so commented out)
-		// script(src="/bower_components/dialog-polyfill/dialog-polyfill.js")
-		// link(rel="stylesheet", type="text/css", href="/bower_components/dialog-polyfill/dialog-polyfill.css")
+		//- polyfill (support for dialog) (no longer using dialg so commented out)
+		//- script(src="/bower_components/dialog-polyfill/dialog-polyfill.js")
+		//- link(rel="stylesheet", type="text/css", href="/bower_components/dialog-polyfill/dialog-polyfill.css")
 
 		| <!--[if IE]> 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.2.0/es5-shim.min.js"></script>
@@ -30,27 +30,27 @@ html
 		<script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
 		<![endif]-->
 
-		//material-design-lite
+		//- material-design-lite
 		link(rel='stylesheet', href='/bower_components/material-design-lite/material.min.css')
 		script(src='/bower_components/material-design-lite/material.min.js')
 		link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Roboto:300,400,500,700')
 		
-		//jQuery
+		//- jQuery
 		script(src='/bower_components/jquery/dist/jquery.min.js')
 		
-		//Material icon fonts
+		//- Material icon fonts
 		link(rel="stylesheet", href="//fonts.googleapis.com/icon?family=Material+Icons")
 
 		
-		//maps
-		//link(rel="stylesheet", href="/maps/documentation/javascript/demos/demos.css")
+		//- maps
+		//- link(rel="stylesheet", href="/maps/documentation/javascript/demos/demos.css")
 
 		
-		//bootstrap
-		//script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
-		//script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
-		//link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.min.css')
-		//link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
+		//- bootstrap
+		//- script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
+		//- script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js')
+		//- link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap-theme.min.css')
+		//- link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css')
 	
 	block content
 		
